--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ section h2 {
 }
 section input[type=range] {
     width: calc(100% - 2.5em);
-    position: absolute;
-    right: 0;
+    position: relative;
+    left: 1.3em;
+    top: -0.2em;
 }
 section table {
     text-align: center;
